[metadata]
name = python-aws-tools
version = attr: src.__version__
url = https://github.com/Tocyuki/python-aws-tools.git
author = Tocyuki
author_email = tocguitar1@gmail.com
description = AWS tools for operation
long_description = file: README.md
test_suite = tests

[options]
zip_safe = False
package_dir =
    = src
packages = find:
install_requires =
    boto3==1.15.8
entry_points = file: entry_points.cfg

[options.packages.find]
where = src